--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
-  <script src="jquery-3.2.1.min.js"></script>
-  <script src="client.js"></script>
+  <link rel="stylesheet" href="styles/style.css">
+  <script src="vendors/jquery-3.2.1.min.js"></script>
+  <script src="scripts/client.js"></script>
   <title>Salary Calculator</title>
 </head>
 <body>
